--- a/public/stylesheets/autores.css
+++ b/public/stylesheets/autores.css
@@ -26,7 +26,7 @@ dd {
 
 body {
 	background-color: rgb(20, 20, 20);
-	background-image: url(background.jpg);
+	background-image: url(../images/background.jpg);
 	background-repeat: no-repeat;
 	background-attachment: fixed;
 	background-size: cover;
