--- a/views/autores.html
+++ b/views/autores.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" type="text/css" href="../stylesheets/autores.css">
+    <link rel="stylesheet" type="text/css" href="../public/stylesheets/autores.css">
 </head>
 
 <body>
@@ -17,7 +17,7 @@
                 <div class="grid-column">
                     <a class="product" href="#">
                         <div class="product-image">
-                            <img src="banner1.png" />
+                            <img src="../public/images/box.jpg" />
                         </div>
                         <div class="product-content">
                             <div class="product-info">
@@ -30,7 +30,7 @@
 
                     <a class="product" href="#">
                         <div class="product-image">
-                            <img src="banner1.png" />
+                            <img src="../public/images/box.jpg" />
                         </div>
                         <div class="product-content">
                             <div class="product-info">
@@ -42,7 +42,7 @@
                     </a>
                     <a class="product" href="#">
                         <div class="product-image">
-                            <img src="banner1.png" />
+                            <img src="../public/images/box.jpg" />
                         </div>
                         <div class="product-content">
                             <div class="product-info">
@@ -56,7 +56,7 @@
                 <div class="grid-column">
                     <a class="product" href="#">
                         <div class="product-image">
-                            <img src="banner1.png"/>
+                            <img src="../public/images/box.jpg"/>
                         </div>
                         <div class="product-content">
                             <div class="product-info">
@@ -68,7 +68,7 @@
                     </a>
                     <a class="product" href="#">
                         <div class="product-image">
-                            <img src="banner1.png" />
+                            <img src="../public/images/box.jpg" />
                         </div>
                         <div class="product-content">
                             <div class="product-info">
@@ -80,7 +80,7 @@
                     </a>
                     <a class="product" href="#">
                         <div class="product-image">
-                            <img src="banner1.png" />
+                            <img src="../public/images/box.jpg" />
                         </div>
                         <div class="product-content">
                             <div class="product-info">
@@ -94,7 +94,7 @@
                 <div class="grid-column">
                     <a class="product" href="#">
                         <div class="product-image">
-                            <img src="banner1.png"/>
+                            <img src="../public/images/box.jpg"/>
                         </div>
                         <div class="product-content">
                             <div class="product-info">
@@ -106,7 +106,7 @@
                     </a>
                     <a class="product" href="#">
                         <div class="product-image">
-                            <img src="banner1.png" />
+                            <img src="../public/images/box.jpg" />
                         </div>
                         <div class="product-content">
                             <div class="product-info">
@@ -118,7 +118,7 @@
                     </a>
                     <a class="product" href="#">
                         <div class="product-image">
-                            <img src="banner1.png" />
+                            <img src="../public/images/box.jpg" />
                         </div>
                         <div class="product-content">
                             <div class="product-info">
@@ -132,7 +132,7 @@
                 <div class="grid-column">
                     <a class="product" href="#">
                         <div class="product-image">
-                            <img src="banner1.png" />
+                            <img src="../public/images/box.jpg" />
                         </div>
                         <div class="product-content">
                             <div class="product-info">
@@ -144,7 +144,7 @@
                     </a>
                     <a class="product" href="#">
                         <div class="product-image">
-                            <img src="banner1.png" />
+                            <img src="../public/images/box.jpg" />
                         </div>
                         <div class="product-content">
                             <div class="product-info">
@@ -156,7 +156,7 @@
                     </a>
                     <a class="product" href="#">
                         <div class="product-image">
-                            <img src="banner1.png" />
+                            <img src="../public/images/box.jpg" />
                         </div>
                         <div class="product-content">
                             <div class="product-info">
